fixing alignment with hero text and footer text

--- a/_scss/_footer.scss
+++ b/_scss/_footer.scss
@@ -101,11 +101,16 @@
   transition: transform 1s ease;
 }
 .newsletter-success {
+  .section-info {
+    overflow: hidden;
+  }
   .headline {
     transform: translateX(-100%);
   }
-  .contact {
-    transform: translateX(100%);
+  @media (min-width: $breakpoint-md) {
+    .contact {
+      transform: translateX(100%);
+    }
   }
   .newsletter-complete {
     visibility: visible;
@@ -115,19 +120,24 @@
 }
 .newsletter-complete {
   align-items: center;
+  background-color: var(--brandBlack);
   display: flex;
   height: 100%;
   justify-content: center;
   left: 0;
   margin-bottom: 7em;
   opacity: 0;
-  position: absolute;
+  position: fixed;
   top: 0;
   transition: visibility 0s linear 1s, opacity 500ms;
   visibility: hidden;
   width: 100%;
   z-index: 9;
 
+  @media (min-width: $breakpoint-md) {
+    background-color: transparent;
+    position: absolute;
+  }
   .inner {
     margin-bottom: 7em;
     position: relative;
